--- a/admin.css
+++ b/admin.css
@@ -1,4 +1,3 @@
-/* admin.css */
 *,
 *::before,
 *::after {
@@ -133,7 +132,6 @@ input[type="date"] {
   justify-content: flex-end;
 }
 
-/* Add User Modal */
 #addUserModal .modal-content {
   max-width: 400px;
 }
@@ -147,11 +145,9 @@ input[type="date"] {
   background-color: #218838;
 }
 
-/* --- Новая часть для фильтрации по тарифу --- */
 .tariff-filter-container {
   display: flex;
   align-items: center;
   gap: 10px;
-  /* Можно подправить отступы, чтобы лучше вписать в общий интерфейс */
-  margin-right: auto; /* чтобы поле фильтра "ушло" влево */
+  margin-right: auto;
 }
